Colocando as máscaras nos campos de RG no formulário para CELULAR

--- a/escolhe.html
+++ b/escolhe.html
@@ -207,7 +207,9 @@
 			$("#cpf2").mask("999.999.999-99");
 			$("#rg2").mask("99.999.999-9");
 			$("#mg").mask("99.999.999");
-			$("#es").mask("9.999.999");
+			$("#es").mask("9.999.999");			
+			$("#mg2").mask("99.999.999");
+			$("#es2").mask("9.999.999");
 			$("#inputTEL").mask("(99)99999-9999");
 			document.getElementById("es").setAttribute("type", "hidden");
 			document.getElementById("mg").setAttribute("type", "hidden");
